<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GrowMe-App</string>
    <string name="back_to_menu_page">BACK TO MENU PAGE</string>
    <string name="what_supplies_i_need_in_order_to_start_gardening">What_supplies_I_need_in_order_to_start_gardening</string>
    <string name="how_do_i_get_the_system_to_work">How do I get the system to work?</string>
    <string name="what_plants_are_recommended_for_this_kind_of_gardening">What plants are recommended for this kind of gardening?</string>
    <string name="what_is_recommended_to_add_to_the_plant_s_water">what is recommended to add to the plant\'s water?</string>
    <string name="how_can_i_reset_my_garden_with_new_plants">How can I reset my garden with new plants?</string>
    <string name="i_can_not_find_the_system_s_number_in_order_to_register_where_is_it">I can not find the system\'s number in order to register, where is it?</string>
    <string name="how_can_i_add_a_plant_into_my_garden">How can I add a plant into my garden?</string>
    <string name="i_have_a_system_how_can_i_now_create_my_garden">I have a system, how can I now create my garden?</string>
    <string name="help">Help</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_click_to_login">Already have an account? click to login</string>
    <string name="e_mail">E-mail</string>
    <string name="registeration">Registeration</string>
    <string name="my_account">My account</string>
    <string name="create_a_garden">Create a garden</string>
    <string name="garden_s_statistics">Garden\'s statistics</string>
    <string name="garden_s_metrics">Garden\'s metrics</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="hello">Hello</string>
    <string name="click_here_to_watch_the_graph">Click here to watch the graph</string>
    <string name="back_button">Back</string>
    <string name="avg">AVG</string>
    <string name="average">Average:</string>
    <string name="water_level">-Water level-</string>
    <string name="statistics">Statistics</string>
    <string name="water_levell">Water level</string>
    <string name="light">Light</string>
    <string name="temperature">Temperature</string>
    <string name="help_">Help</string>
    <string name="garden_s">Garden\'s</string>
    <string name="live_stream">live stream</string>
    <string name="click_here_to_watch_live_stream">Click here to watch live stream</string>
    <string name="back_">Back</string>
    <string name="log_in">Log In</string>
    <string name="e__mail">E-mail</string>
    <string name="password_">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_click_to_register">Don\'t have an account? click to register</string>
    <string name="temperature_">-Temperature-</string>
    <string name="ph_level">-PH level-</string>
    <string name="light_">-Light-</string>
    <string name="help__">-Help-</string>
    <string name="current">Current</string>
    <string name="ph_level_">PH level</string>
    <string name="temperature__">Temperature</string>
    <string name="light_ldr">Light (LDR)</string>
    <string name="water_levellll">Water level</string>
    <string name="led">LED</string>
    <string name="fan">Fan</string>
    <string name="humidity">Humidity</string>
    <string name="metrics">Metrics</string>
    <string name="loading">Loading...</string>
    <string name="todo">TODO</string>
    <string name="loading_">Loading</string>
    <string name="todo_">TODO</string>
    <string name="backkkk">Back</string>
    <string name="todo__">TODO</string>
    <string name="loading___">Loading</string>
    <string name="todo___">TODO</string>
    <string name="loading____">Loading</string>
    <string name="show">Show Popup</string>
    <string name="message1">bt1</string>
    <string name="message2">bt2</string>
    <string name="message3">bt3</string>
    <string name="message4">bt4</string>
    <string name="message5">bt5</string>
    <string name="message6">bt6</string>
    <string name="message7">bt7</string>
    <string name="message8">bt8</string>

</resources>