<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/flowers9"
    tools:context=".HelpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="ExtraText">
        <TextView
            android:id="@+id/help_headline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:fontFamily="cursive"
            android:text="@string/help"
            android:layout_marginStart="215dp"
            android:textColor="#BB324E"
            android:textColorHint="#373737"
            android:textSize="96sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.857"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.026"
            android:paddingBottom="40dp"/>


        <Button
            android:id="@+id/I_have_a_system_how_can_I_now_create_my_garden"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:outlineSpotShadowColor="@color/black"
            android:text="@string/i_have_a_system_how_can_i_now_create_my_garden"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />
        <Button
            android:id="@+id/How_can_I_add_a_plant_into_my_garden"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/how_can_i_add_a_plant_into_my_garden"
            android:outlineSpotShadowColor="@color/black"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />
        <Button
            android:id="@+id/system_number_where_is_it"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/i_can_not_find_the_system_s_number_in_order_to_register_where_is_it"
            android:outlineSpotShadowColor="@color/black"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />
        <Button
            android:id="@+id/How_can_I_reset_my_garden_with_new_plants"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/how_can_i_reset_my_garden_with_new_plants"
            android:outlineSpotShadowColor="@color/black"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />
        <Button
            android:id="@+id/What_plants_are_recommended_for_gardening"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/what_plants_are_recommended_for_this_kind_of_gardening"
            android:outlineSpotShadowColor="@color/black"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />
        <Button
            android:id="@+id/What_is_recommended_to_add_to_the_plant_water"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/what_is_recommended_to_add_to_the_plant_s_water"
            android:outlineSpotShadowColor="@color/black"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />
        <Button
            android:id="@+id/How_do_I_get_the_system_to_work"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/how_do_i_get_the_system_to_work"
            android:outlineSpotShadowColor="@color/black"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />
        <Button
            android:id="@+id/What_supplies_I_need_to_start_gardening"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:text="@string/what_supplies_i_need_in_order_to_start_gardening"
            android:outlineSpotShadowColor="@color/black"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />

        <Button
            android:id="@+id/BACK_TO_MENU_PAGE"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/back_to_menu_page"
            android:outlineSpotShadowColor="@color/black"
            android:textColor="@color/LightPink"
            tools:ignore="UnusedAttribute,VisualLintButtonSize" />

    </LinearLayout>
</ScrollView>
