<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/loginbackgroung"
    tools:context=".LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp"
            android:background="@drawable/border">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:textSize="36sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/Sea_Green"/>



            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_email"
                android:background="@drawable/border"
                android:layout_marginTop="40dp"
                android:padding="8dp"
                android:hint="@string/e__mail"
                android:drawableStart="@drawable/baseline_email_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/login_password"
                android:background="@drawable/border"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:ems="10"
                android:inputType="textPassword"
                android:hint="@string/password_"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:textColor="@color/black"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/login"
                android:id="@+id/Login_button"
                android:textSize="18sp"
                android:layout_marginTop="30dp"
                app:cornerRadius = "20dp"/>

            <TextView
                android:id="@+id/Register_redirect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:padding="7dp"
                android:text="@string/don_t_have_an_account_click_to_register"
                android:textColor="@color/Sea_Green"
                android:textSize="16sp">
            </TextView>


        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>