<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/flowers9"
    tools:context=".MetricsActivity">


    <TextView
        android:id="@+id/current_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="@string/current"
        android:textColor="#CC46A6"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.776"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.06" />

    <TextView
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:paddingTop="10dp"
        android:text="Humidity (%):"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.425"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/metrics_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="serif"
        android:text="@string/metrics"
        android:textColor="#CC46A6"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.927"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.126" />

    <TextView
        android:layout_width="111dp"
        android:layout_height="55dp"
        android:paddingTop="10dp"
        android:text="PH level (0-14):"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.053"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:paddingTop="10dp"
        android:text="Temperature(C):"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.247"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:paddingTop="10dp"
        android:text="Water level(mm):"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.337"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:paddingTop="10dp"
        android:text="Light (lux):"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:paddingTop="10dp"
        android:text="Fans        (1:ON, 0:OFF):"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.785"
        tools:ignore="HardcodedText" />

    <TextView
        android:layout_width="123dp"
        android:layout_height="54dp"
        android:paddingTop="10dp"
        android:text="LED          (1:ON, 0:OFF):"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.695"
        tools:ignore="HardcodedText" />

    <TextView
        android:id="@+id/ph_level_metrics"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="@string/ph_level_"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />

    <TextView
        android:id="@+id/temperature_metrics"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="@string/temperature__"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/light_metrics"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="@string/light_ldr"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/LED_metrics"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="@string/led"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.698" />

    <TextView
        android:id="@+id/Humidity_metrics"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="@string/humidity"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.427" />

    <TextView
        android:id="@+id/water_level_metrics"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="@string/water_levellll"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.339" />


    <TextView
        android:id="@+id/fan_level_metrics"
        android:layout_width="196dp"
        android:layout_height="48dp"
        android:background="@drawable/border"
        android:paddingTop="10dp"
        android:text="@string/fan"
        android:textAlignment="center"
        android:textColor="#CB46A5"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <Button
        android:id="@+id/back_button_metrics"
        android:layout_width="128dp"
        android:layout_height="54dp"
        android:text="@string/back_button"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.933"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>